// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideNext renders the default copy on the final guide 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-1 p {
  margin-top: 8px;
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-2 {
  font-size: 16px;
  margin-bottom: 16px;
  color: #5C6C75;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

.emotion-3 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-4 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  color: #ffffff!important;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border-radius: 24px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: #FFFFFF;
  color: #1C2D38;
  margin-top: 40px;
  padding: 40px 24px;
  background-color: #FFFFFF;
  border-color: #E8EDEB;
}

@media not all and (max-width: 767px) {
  .emotion-7 {
    padding: 48px;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.dark-theme .emotion-7 {
  background-color: #112733;
  border-color: #1C2D38;
}

.emotion-8 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-9 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.dark-theme .emotion-9 {
  background-color: #0C2657;
  color: #C3E7FE;
}

.emotion-10 {
  color: #001E2B;
  font-weight: bold;
}

.dark-theme .emotion-10 {
  color: #E8EDEB;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
}

.emotion-12 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-12:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-12:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #00A35C;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-14 {
  color: #00A35C;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15>span>code,
.emotion-15>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15:focus,
.emotion-15:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-15:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-15:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-16 {
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-16 {
  color: #E8EDEB;
}

.emotion-16:hover,
.emotion-16:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        What's Next
      </div>
      <div
        class="emotion-3"
      >
        Become a MongoDB Professional
      </div>
      <p>
        Congrats. You've completed all the guides. Want to take the next step? Register for the developer exam.
      </p>
      <span
        aria-disabled="false"
        class="lg-ui-0001 lg-ui-button-0000 emotion-4"
        data-lgid="lg-button"
        target="_self"
        type="button"
      >
        <span>
          <div
            class="emotion-5"
          />
          <div
            class="emotion-6"
          >
            Learn More
          </div>
        </span>
      </span>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          Chapter 2
        </div>
        <div
          class="emotion-10"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-11"
      >
        <li
          class="emotion-12"
          color="#00A35C"
        >
          <div
            class="emotion-13"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-14"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6.306 9.05 5.455-5.455a1 1 0 0 1 1.414 0l.707.707a1 1 0 0 1 0 1.414l-7.067 7.068a1 1 0 0 1-1.5-.098l-3.049-3.97a1 1 0 0 1 .184-1.402l.595-.457a1.25 1.25 0 0 1 1.753.23L6.306 9.05Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-15 emotion-16"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the first guide in the next chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-1 p {
  margin-top: 8px;
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-2 {
  font-size: 16px;
  margin-bottom: 16px;
  color: #5C6C75;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

.emotion-3 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  color: #ffffff!important;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:focus,
.emotion-4:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border-radius: 24px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: #FFFFFF;
  color: #1C2D38;
  margin-top: 40px;
  padding: 40px 24px;
  background-color: #FFFFFF;
  border-color: #E8EDEB;
}

@media not all and (max-width: 767px) {
  .emotion-7 {
    padding: 48px;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.dark-theme .emotion-7 {
  background-color: #112733;
  border-color: #1C2D38;
}

.emotion-8 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-9 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.dark-theme .emotion-9 {
  background-color: #0C2657;
  color: #C3E7FE;
}

.emotion-10 {
  color: #001E2B;
  font-weight: bold;
}

.dark-theme .emotion-10 {
  color: #E8EDEB;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
}

.emotion-12 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-12:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-12:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E8EDEB;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #00A35C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-14 {
  color: #00A35C;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15>span>code,
.emotion-15>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15:focus,
.emotion-15:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-15:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-15:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-16 {
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-16 {
  color: #E8EDEB;
}

.emotion-16:hover,
.emotion-16:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        What's Next
      </div>
      <div
        class="emotion-3"
      >
        Read Data in MongoDB
      </div>
      <a
        aria-disabled="false"
        class="lg-ui-button-0000 emotion-4"
        data-lgid="lg-button"
        href="/server/read/"
        type="button"
      >
        <div
          class="emotion-5"
        />
        <div
          class="emotion-6"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          Chapter 2
        </div>
        <div
          class="emotion-10"
        >
          CRUD
        </div>
      </div>
      <ul
        class="emotion-11"
      >
        <li
          class="emotion-12"
          color="#E8EDEB"
        >
          <div
            class="emotion-13"
            color="#00A35C"
          >
            <svg
              class="emotion-14"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-15 emotion-16"
            href="/server/read/"
          >
            Read Data in MongoDB
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuideNext renders the next guide in the same chapter 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-top: 1px solid #E8EDEB;
  margin-bottom: 24px;
  padding-top: 56px;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 34px;
  }
}

.emotion-1 p {
  margin-top: 8px;
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

.emotion-2 {
  font-size: 16px;
  margin-bottom: 16px;
  color: #5C6C75;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

.emotion-3 {
  font-size: 24px;
  font-weight: bold;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #00684A;
  border-color: #00684A;
  color: #FFFFFF;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  color: #ffffff!important;
}

.emotion-4>span>code,
.emotion-4>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-4:focus,
.emotion-4:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-4:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-4:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  border-color: #00593f;
  box-shadow: 0 0 0 3px #C0FAE6;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #FFFFFF;
  background-color: #00593f;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  position: relative;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: border,box-shadow;
  border-radius: 24px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  line-height: 20px;
  padding: 24px;
  min-height: 68px;
  border: 1px solid #E8EDEB;
  box-shadow: 0 4px 10px -4px rgba(0,30,43,0.3);
  background-color: #FFFFFF;
  color: #1C2D38;
  margin-top: 40px;
  padding: 40px 24px;
  background-color: #FFFFFF;
  border-color: #E8EDEB;
}

@media not all and (max-width: 767px) {
  .emotion-7 {
    padding: 48px;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-7 {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
    margin-top: 0;
    max-width: 510px;
  }
}

.dark-theme .emotion-7 {
  background-color: #112733;
  border-color: #1C2D38;
}

.emotion-8 {
  margin-bottom: 24px;
}

@media not all and (max-width: 767px) {
  .emotion-8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    gap: 0 16px;
    margin-bottom: 34px;
  }
}

.emotion-9 {
  background-color: #E3FCF7;
  border-radius: 4px;
  color: #001E2B;
  font-size: 13px;
  font-weight: bold;
  line-height: 24px;
  height: 24px;
  text-align: center;
  width: 83px;
  margin-bottom: 8px;
}

.dark-theme .emotion-9 {
  background-color: #0C2657;
  color: #C3E7FE;
}

.emotion-10 {
  color: #001E2B;
  font-weight: bold;
}

.dark-theme .emotion-10 {
  color: #E8EDEB;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
}

.emotion-12 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-12:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-12:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #00A35C;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-14 {
  color: #00A35C;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15>span>code,
.emotion-15>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15:focus,
.emotion-15:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-15:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-15:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-16 {
  color: #001E2B;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.dark-theme .emotion-16 {
  color: #E8EDEB;
}

.emotion-16:hover,
.emotion-16:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 40px;
  padding-top: 0!important;
  position: relative;
}

.emotion-17:not(:last-child) {
  padding-bottom: 16px;
}

.emotion-17:not(:last-child):before {
  content: '';
  position: absolute;
  left: 10px;
  top: 20px;
  height: calc(100% - 20px);
  border-left: solid 1px #E8EDEB;
}

.emotion-18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  border: solid 1px #00A35C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 12px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-19 {
  color: #00A35C;
}

.emotion-24 {
  color: #3D4F58;
}

.dark-theme .emotion-24 {
  color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        What's Next
      </div>
      <div
        class="emotion-3"
      >
        Set Up Atlas Connectivity
      </div>
      <a
        aria-disabled="false"
        class="lg-ui-button-0000 emotion-4"
        data-lgid="lg-button"
        href="/cloud/connectionstring/"
        type="button"
      >
        <div
          class="emotion-5"
        />
        <div
          class="emotion-6"
        >
          Start Guide
        </div>
      </a>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-9"
        >
          Chapter 1
        </div>
        <div
          class="emotion-10"
        >
          Atlas
        </div>
      </div>
      <ul
        class="emotion-11"
      >
        <li
          class="emotion-12"
          color="#00A35C"
        >
          <div
            class="emotion-13"
            color="transparent"
          >
            <svg
              aria-label="Checkmark Icon"
              class="emotion-14"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m6.306 9.05 5.455-5.455a1 1 0 0 1 1.414 0l.707.707a1 1 0 0 1 0 1.414l-7.067 7.068a1 1 0 0 1-1.5-.098l-3.049-3.97a1 1 0 0 1 .184-1.402l.595-.457a1.25 1.25 0 0 1 1.753.23L6.306 9.05Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <a
            class="emotion-15 emotion-16"
            href="/cloud/account/"
          >
            Create and Manage a MongoDB Account
          </a>
        </li>
        <li
          class="emotion-17"
          color="#E8EDEB"
        >
          <div
            class="emotion-18"
            color="#00A35C"
          >
            <svg
              class="emotion-19"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-15 emotion-16"
            href="/cloud/connectionstring/"
          >
            Set Up Atlas Connectivity
          </a>
        </li>
        <li
          class="emotion-17"
          color="#E8EDEB"
        >
          <div
            class="emotion-13"
            color="transparent"
          >
            <svg
              class="emotion-24"
              fill="currentColor"
              height="12"
              viewBox="0 0 7 12"
              width="7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.47516 3.75H3.95081L4.88268 0.707813C4.97017 0.351563 4.71862 0 4.37518 0H1.22522C0.96272 0 0.739598 0.208594 0.704598 0.4875L0.00460634 6.1125C-0.0369557 6.45 0.208042 6.75 0.525225 6.75H3.12176L2.11333 11.3086C2.03458 11.6648 2.28833 12 2.62301 12C2.80676 12 2.98176 11.8969 3.07801 11.7188L6.92797 4.59375C7.1314 4.22109 6.87984 3.75 6.47516 3.75Z"
              />
            </svg>
          </div>
          <a
            class="emotion-15 emotion-16"
            href="/cloud/migrate-from-aws-to-atlas/"
          >
            Migrate a MongoDB Replicate Set from AWS to MongoDB Atlas
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
